# jk-soccer-core

./: CHANGELOG.md  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  pytest.ini  release.config.js  soccer-core.py  tasks.py
.github/workflows/: auto-assign-pr.yml  commitlint.yml  eslint.yml  jsonlint.yml  lint.yml  release.yml  test.yml
src/jk_soccer_core/: __init__.py  match.py
src/jk_soccer_core/calculations/: draws.py  losses.py  match.py  percentages.py  points.py  wins.py
src/jk_soccer_core/models/: __init__.py  coach.py  event.py  match.py  place.py  player.py  team.py  thing.py
tests/: test_jk_soccer_core.py
tests/calculations/: test_draws.py  test_losses.py  test_percentages.py  test_points.py  test_wins.py
tests/models/: test_match.py  test_place.py  test_thing.py
