[project]
name = "jk-soccer-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omar Crosby", email = "omar.crosby@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.5",
]

[project.scripts]
jk-soccer-core = "jk_soccer_core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.invoke]
version = "2.2.0"

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

